--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hack-the-future",
+  "name": "smpl-image-editor",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
